# CaraTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: all-in-one.yaml
AalTest/source/AalTest/: Asserts.cpp  Asserts.h  Diff.cpp  Diff.h  DiffLocation.h  FailedTestException.cpp  FailedTestException.h  FailureBehavior.cpp  FailureBehavior.h  File.cpp  File.h  ParameterizedTest.h  SimpleTest.h  SkipTestException.cpp  SkipTestException.h  SnapshotCreatedTestException.cpp  SnapshotCreatedTestException.h  Stringify.cpp  Stringify.h  TestBase.h  TestResult.h  TestRunner.cpp  TestRunner.h  TestRunnerNullOutput.h  TestRunnerOutputBase.h  TestRunnerWindowsConsoleOutput.cpp  TestRunnerWindowsConsoleOutput.h  TestSuite.cpp  TestSuite.h  TestSuiteResult.h  ValueMismatchTestException.cpp  ValueMismatchTestException.h
CMake/: Qt6.cmake  caratest.pc.in
CaraTest/: CMakeLists.txt
CaraTest/source/: CaraTest.h
CaraTest/source/CaraTest/: API.h  Asserts.cpp  Asserts.h  Diff.cpp  Diff.h  DiffLocation.h  FailedTestException.cpp  FailedTestException.h  FailureBehavior.cpp  FailureBehavior.h  File.cpp  File.h  HelperExceptions.cpp  HelperExceptions.h  ParameterizedTest.h  SimpleTest.h  SkipTestException.cpp  SkipTestException.h  SnapshotCreatedTestException.cpp  SnapshotCreatedTestException.h  Stringify.cpp  Stringify.h  StringifyForQt.h  TestBase.h  TestHelpers.cpp  TestHelpers.h  TestResult.h  TestRunner.cpp  TestRunner.h  TestRunnerConsoleOutput.cpp  TestRunnerConsoleOutput.h  TestRunnerNullOutput.h  TestRunnerOutputBase.h  TestRunnerWindowsConsoleOutput.cpp  TestRunnerWindowsConsoleOutput.h  TestSuite.cpp  TestSuite.h  TestSuiteResult.h  Tests.cpp  Tests.h  (+2 more)
Tests/AalTestTests/: CMakeLists.txt
Tests/AalTestTests/source/: AalTestTests.cpp  AalTestTests.h  main.cpp
Tests/AllInOne/: CMakeLists.txt
Tests/AllInOne/source/: main.cpp
Tests/CaraTestTests/: CMakeLists.txt
Tests/CaraTestTests/source/: CaraTestTests.cpp  CaraTestTests.h  main.cpp
Tests/DiffTests/: CMakeLists.txt
Tests/DiffTests/source/: DiffTests.cpp  DiffTests.h  main.cpp
Tools/AalTestSnapshotTool/: CMakeLists.txt
Tools/AalTestSnapshotTool/source/: DiffHighlighter.cpp  DiffHighlighter.h  SnapshotToolWindow.cpp  SnapshotToolWindow.h  main.cpp
Tools/AalTestSnapshotTool/styles/: darkmode.qss
Tools/CaraTestSnapshotTool/: CMakeLists.txt
Tools/CaraTestSnapshotTool/source/: DiffHighlighter.cpp  DiffHighlighter.h  FileHelper.cpp  FileHelper.h  SnapshotToolWindow.cpp  SnapshotToolWindow.h  main.cpp
Tools/CaraTestSnapshotTool/styles/: acceptbutton.qss  rejectbutton.qss
Tools/SnapshotTestDir/: text1.txt.snapshot  text2.txt.snapshot
